--- a/hw1/pom.xml
+++ b/hw1/pom.xml
@@ -5,6 +5,12 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
+  
+    <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.32.3.2</version>
+    </dependency>
   	<dependency>
 	    <groupId>io.javalin</groupId>
 	    <artifactId>javalin</artifactId>
